# f_brain

./: .env  README.me  docker-compose.yml  prometheus.yml
.github/workflows/: cd.yml  ci.yml
client/: Dockerfile  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx
client/src/components/: App.jsx  ProfessorStats.jsx  VoteForm.jsx
client/src/hooks/: api.js
client/src/pages/: Dashboard.jsx  ProfDetail.jsx  VotePage.jsx
proxy/: default.conf
server/: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml  pytest.ini
server/core/: admin.py  models.py  serializers.py  urls.py  views.py
server/core/management/commands/: setup_data.py
server/core/migrations/: 0001_initial.py  0002_alter_professor_options_alter_vote_options_and_more.py
server/core/tests/: tests.py
server/server_config/: celery.py  settings.py  urls.py
