[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend Django pour système de vote professeurs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.3.1"
celery = "^5.3.0"
gunicorn = "^21.2.0"
django-prometheus = "^2.3.1"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"